# diskd-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
crates/diskd-cli/: Cargo.toml
crates/diskd-cli/src/: main.rs
crates/diskd-cli/tests/: cli_e2e.rs
crates/diskd-client/: Cargo.toml
crates/diskd-client/src/: lib.rs
crates/diskd-config/: Cargo.toml
crates/diskd-config/src/: lib.rs
docs/: commands.md  configuration.md  development.md  how-to.md  mcp.md  quick-start.md
skill/: README.md  SKILL.md
skill/references/: auth-and-config.md  commands.md  mcp.md  workflows.md
