[workspace]
members = [
  "crates/diskd-client",
  "crates/diskd-cli",
  "crates/diskd-config",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/diskd-ai/diskd-cli"

[workspace.dependencies]
anyhow = "=1.0.103"
base64 = "=0.22.1"
clap = "=4.6.1"
mime_guess = "=2.0.5"
reqwest = { version = "=0.13.4", default-features = false }
serde = "=1.0.228"
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tiny_http = "=0.12.0"
