[package]
name = "diskd-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
diskd-client = { path = "../diskd-client" }
diskd-config = { path = "../diskd-config" }
mime_guess = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tiny_http = { workspace = true }

[[bin]]
name = "diskd"
path = "src/main.rs"
