[package]
name = "diskd-cli"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
diskd-client = { path = "../diskd-client" }
diskd-config = { path = "../diskd-config" }
flate2 = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls"] }
self-replace = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tiny_http = { workspace = true }

[[bin]]
name = "diskd"
path = "src/main.rs"
