[package]
name = "diskd-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "form", "json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
